--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,6 +23,9 @@ pipeline{
             steps {
                 echo "Hello, ${PERSON}, nice to meet you."
             }
+			steps{
+			build 'BuildMe'
+			}
         }
 	}
 }
